# gendiff

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: project-check.yml
gendiff/: __init__.py  convert_json.py  generator.py  just.py  parser.py  stringify.py  utils.py
gendiff/formatters/: jsonify.py  make_plain.py  stringify.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py  test_parser.py  test_stringify.py
tests/fixtures/: example_nested.txt  json.json  nested.txt  plain.txt
